# mcsm

./: .gitattributes  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
requirements/: dev.txt
src/mcsm-template/: __init__.py  __version__.py
src/mcsm_template/: __init__.py  _version.py
