[metadata]
name = mcsm_template
# Version needs regex in setup.py.
url = https://palletsprojects.com/p/flask
project_urls =
    Documentation = https://flask.palletsprojects.com/
    Code = https://github.com/pallets/flask
    Issue tracker = https://github.com/pallets/flask/issues
license = file: LICENSE
author = ZhengXiong Zhao
author_email = zhengxiongzhao@gmail.com
description = A simple
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 1 - Production/Stable
    Environment :: Python Environment
    Framework :: mcsm
    Intended Audience :: Developers
    License :: OSI Approved :: Apche License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = mcsm_template/_version.py
versionfile_build = mcsm_template/_version.py
tag_prefix =
parentdir_prefix =
